# jfterm

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
data/: dev.jfim.jfterm.desktop
docs/superpowers/plans/: 2026-05-06-archive-projects.md  2026-05-06-desktop-packaging.md  2026-05-06-flash-commands.md  2026-05-06-jfterm-v1.md  2026-05-06-restart-tab.md  2026-05-06-tab-progress-indicators.md  2026-05-06-webkit-tabs.md  2026-05-07-command-launcher.md  2026-05-07-configurable-launcher-shortcut.md  2026-05-07-linked-flash-tabs.md  2026-05-07-mcp-server.md  2026-05-07-reorder-projects.md  2026-05-07-terminal-appearance.md  2026-06-01-jfterm-muxer-client.md
docs/superpowers/specs/: 2026-05-06-archive-projects-design.md  2026-05-06-desktop-packaging-design.md  2026-05-06-flash-commands-design.md  2026-05-06-jfterm-v1-design.md  2026-05-06-mcp-server-design.md  2026-05-06-restart-tab-design.md  2026-05-06-tab-progress-indicators-design.md  2026-05-06-webkit-tabs-design.md  2026-05-07-command-launcher-design.md  2026-05-07-configurable-launcher-shortcut-design.md  2026-05-07-reorder-projects-design.md  2026-05-07-terminal-appearance-design.md  2026-06-01-terminal-muxer-design.md
packaging/: jfterm.sh
src/jfterm/: __init__.py  __main__.py  app.py  dialogs.py  double_tap.py  flash.py  fuzzy.py  launcher.py  launcher_items.py  launcher_shortcut.py  linked.py  linkedtab.py  matching.py  mcp_gtk.py  mcp_server.py  mcp_token.py  mcp_tools.py  mcp_types.py  menus.py  models.py  muxer_client.py  muxer_proto.py  osc_scanner.py  palettes.py  persistence.py  preferences.py  progress_bar.py  project_saver.py  pty_proxy.py  remote_pty_proxy.py  settings.py  shortcuts.py  sidebar.py  status_dot.py  terminal.py  url_routing.py  url_scanner.py  watchdog.py  webkit_session.py  webtab.py  (+1 more)
tests/: fake_muxer.py  fakes.py  test_double_tap.py  test_flash.py  test_fuzzy.py  test_launcher.py  test_launcher_items.py  test_launcher_shortcut.py  test_linked.py  test_matching.py  test_mcp_server.py  test_mcp_token.py  test_mcp_tools.py  test_models.py  test_muxer_client.py  test_muxer_proto.py  test_osc_scanner.py  test_palettes.py  test_persistence.py  test_progress_bar.py  test_project_saver.py  test_remote_pty_proxy.py  test_settings.py  test_url_routing.py  test_url_scanner.py  test_watchdog.py  test_window.py
