[project]
name = "jfterm"
version = "0.1.0"
description = "A GNOME terminal that groups tabs by project."
authors = [
    { name = "Jean-Francois Im", email = "jeanfrancois.im@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
jfterm = "jfterm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
# Local stubs in ./typings declare gi.repository submodules as Any so
# pyright doesn't flag every PyGObject import as an attribute error.
stubPath = "typings"
reportMissingModuleSource = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "RUF012", # PyGObject's __gsignals__ requires a mutable dict class attr
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.uv]
# Use the system python so the venv (created with --system-site-packages)
# can see the apt-installed PyGObject / VTE bindings without rebuilding
# pycairo + pygobject from source. If you recreate the venv, run:
#   uv venv --system-site-packages --python /usr/bin/python3
python-preference = "only-system"
